--- a/.github/workflows/ziyedd-sync.yml
+++ b/.github/workflows/ziyedd-sync.yml
@@ -19,7 +19,7 @@
 
 
 
-name: ziye-sync
+name: ziyedd-sync
 on:
   schedule:
     - cron: '1 */3 * * *'
@@ -27,7 +27,7 @@ on:
   watch:
     types: started
   repository_dispatch:
-    types: sync-JavaScript/tree
+    types: sync-JavaScript-tree
 jobs:
   repo-sync:
     env:
@@ -39,11 +39,11 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: sync 6Svip120apk69-gitee_q8qsTAUA_cThxc1RBVUE
+      - name: sync JavaScript-tree
         uses: repo-sync/github-sync@v2
         if: env.PAT
         with:
-          source_repo: "https://github.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE.git"
+          source_repo: "https://github.com/JavaScript/tree.git"
           source_branch: "main"
           destination_branch: "ZIYE"
           github_token: ${{ secrets.PAT }}
